<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="update">Update</string>
    <string name="currpass">CURRENT PASSWORD</string>
    <string name="act">ACTIVITY</string>
    <string name="user">USERNAME</string>
    <string name="search">Search</string>
    <string name="curram">Current Amount : </string>
    <string name="newpass">NEW PASSWORD</string>
    <string name="delete">Delete</string>
    <string name="amount">AMOUNT</string>
    <string name="insert">insert</string>
    <string name="pass">PASSWORD</string>
    <string name="chngpass">Change Password</string>
    <string name="login">Existing user? login</string>
    <string name="create">New user? create</string>
    <string name="total">Total</string>
    <string name="newamount">NEW AMOUNT</string>
    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="year_array">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
    </string-array>

</resources>
