<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_gray"
    android:weightSum="1"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/lineartop"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:text="@string/insert"
        android:textSize="18sp"
        android:textColor="@color/brown"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/circle"
        android:id="@+id/btinsert" />

    <Button
        android:text="@string/update"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:textColor="@color/brown"
        android:layout_marginStart="7dp"
        android:background="@drawable/circle"
        android:id="@+id/btnupdate" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/lineartop"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:text="@string/search"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="7dp"
        android:textColor="@color/brown"
        android:layout_weight="1"
        android:background="@drawable/circle"
        android:id="@+id/btsearch" />

    <Button
        android:text="@string/delete"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textColor="@color/brown"
        android:layout_marginTop="7dp"
        android:layout_weight="1"
        android:layout_marginStart="7dp"
        android:background="@drawable/circle"
        android:id="@+id/btndelete" />
    </LinearLayout>

</RelativeLayout>